@@ -7,6 +7,7 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.UUID;
 
 import static org.junit.Assert.*;
 
@@ -23,7 +24,7 @@ public class OrganisationTreeBuilderTest {
         var child = createOrganisation("child", 13, 12, null, "child_code");
         var childOne = createOrganisation("childOne", 12, 11, null, null);
         var childTwo = createOrganisation("childTwo", 14, 11, null, null);
-        var parent = createOrganisation("parent", 11, 10, 20, "parent_code", "sms-sender", "callback");
+        var parent = createOrganisation("parent", 11, 10, 20, "parent_code", "sms-sender", "callback", UUID.randomUUID().toString(), UUID.randomUUID().toString());
         var superParent = createOrganisation("superParent", 10, null, null, null);
 
         var result = organisationTreeBuilder.buildOrganisationTree(Arrays.asList(childOne, child, superParent, parent, childTwo));
@@ -34,22 +35,28 @@ public class OrganisationTreeBuilderTest {
         assertEquals(superParent.getGroupId().toString(), result.getCode());
         assertNull(result.getSmsCallbackUrl());
         assertNull(result.getSmsSenderName());
+        assertNull(result.getDeviceWebhookEndpoint());
+        assertNull(result.getDeviceWebhookEndpointKey());
         assertEquals(0, result.getPoolSize().intValue());
         assertEquals(1, result.getChildren().size());
 
-        var treeChild = result.getChildren().get(0);
+        var treeChild = result.getChildren().getFirst();
         assertEquals(parent.getOrganisationName(), treeChild.getName());
         assertEquals(parent.getOrganisationId(), treeChild.getCode());
         assertEquals("sms-sender", treeChild.getSmsSenderName());
         assertEquals("callback", treeChild.getSmsCallbackUrl());
+        assertEquals(parent.getDeviceWebhookEndpoint(), treeChild.getDeviceWebhookEndpoint());
+        assertEquals(parent.getDeviceWebhookEndpointKey(), treeChild.getDeviceWebhookEndpointKey());
         assertEquals(20, treeChild.getPoolSize().intValue());
         assertEquals(2, treeChild.getChildren().size());
 
-        var childOneTree = treeChild.getChildren().get(0);
+        var childOneTree = treeChild.getChildren().getFirst();
         assertEquals(childOne.getOrganisationName(), childOneTree.getName());
         assertEquals(childOne.getGroupId().toString(), childOneTree.getCode());
         assertNull(childOneTree.getSmsCallbackUrl());
         assertNull(childOneTree.getSmsSenderName());
+        assertNull(childOneTree.getDeviceWebhookEndpoint());
+        assertNull(childOneTree.getDeviceWebhookEndpointKey());
         assertEquals(0, childOneTree.getPoolSize().intValue());
         assertEquals(1, childOneTree.getChildren().size());
 
@@ -58,14 +65,18 @@ public class OrganisationTreeBuilderTest {
         assertEquals(childTwo.getGroupId().toString(), childTwoTree.getCode());
         assertNull(childTwoTree.getSmsCallbackUrl());
         assertNull(childTwoTree.getSmsSenderName());
+        assertNull(childTwoTree.getDeviceWebhookEndpoint());
+        assertNull(childTwoTree.getDeviceWebhookEndpointKey());
         assertEquals(0, childTwoTree.getPoolSize().intValue());
         assertTrue(childTwoTree.getChildren().isEmpty());
 
-        treeChild = childOneTree.getChildren().get(0);
+        treeChild = childOneTree.getChildren().getFirst();
         assertEquals(child.getOrganisationName(), treeChild.getName());
         assertEquals(child.getOrganisationId(), treeChild.getCode());
         assertNull(treeChild.getSmsCallbackUrl());
         assertNull(treeChild.getSmsSenderName());
+        assertNull(treeChild.getDeviceWebhookEndpoint());
+        assertNull(treeChild.getDeviceWebhookEndpointKey());
         assertEquals(0, treeChild.getPoolSize().intValue());
         assertTrue(treeChild.getChildren().isEmpty());
     }
@@ -83,10 +94,10 @@ public class OrganisationTreeBuilderTest {
     }
 
     private Organisation createOrganisation(String name, int groupId, Integer parentId, Integer poolSize, String organisationId) {
-        return createOrganisation(name, groupId, parentId, poolSize, organisationId, null, null);
+        return createOrganisation(name, groupId, parentId, poolSize, organisationId, null, null, null, null);
     }
 
-    private Organisation createOrganisation(String name, int groupId, Integer parentId, Integer poolSize, String organisationId, String smsSenderName, String smsCallbackUrl) {
+    private Organisation createOrganisation(String name, int groupId, Integer parentId, Integer poolSize, String organisationId, String smsSenderName, String smsCallbackUrl, String deviceWebhookEndpoint, String deviceWebhookEndpointKey) {
         var organisation = new Organisation();
         organisation.setGroupId((long) groupId);
         if(parentId != null) {
@@ -99,6 +110,8 @@ public class OrganisationTreeBuilderTest {
         organisation.setOrganisationId(organisationId);
         organisation.setSmsCallbackUrl(smsCallbackUrl);
         organisation.setSmsSenderName(smsSenderName);
+        organisation.setDeviceWebhookEndpoint(deviceWebhookEndpoint);
+        organisation.setDeviceWebhookEndpointKey(deviceWebhookEndpointKey);
 
         return organisation;
     }
